  * osm: New plugin to embed an OpenStreetMap into a wiki page.
    Supports waypoints, tags, and can even draw paths matching
    wikilinks between pages containing waypoints.
    Thanks to Blars Blarson and Antoine Beaupré, as well as the worldwide
    OpenStreetMap community for this utter awesomeness.
  * Add a few missing jquery UI icons to attachment upload widget underlay.

 -- Joey Hess <joeyh@debian.org>  Wed, 08 Feb 2012 16:07:00 -0400

ikiwiki (3.20120202) unstable; urgency=low

  * mdwn: Added nodiscount setting, which can be used to avoid using the
    markdown discount engine, when maximum compatability is needed.
  * Switch to YAML::XS to work around insanity in YAML::Mo. Closes: #657533
  * cvs: Ensure text files are added in non-binary mode. (Amitai Schlair)
  * cvs: Various cleanups and testing. (Amitai Schlair)
  * calendar: Fix strftime encoding bug.
  * shortcuts: Fixed a broken shortcut to wikipedia (accidentially
    made into a shortcut to wikiMedia).
  * Various portability improvements. (Amitai Schlair)

 -- Joey Hess <joeyh@debian.org>  Thu, 02 Feb 2012 21:42:40 -0400

ikiwiki (3.20120115) unstable; urgency=low

  * Make backlink(.) work. Thanks, Giuseppe Bilotta.
  * mdwn: Workaround discount's eliding of <style> blocks.
  * attachment: Fix utf-8 display bug.

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Jan 2012 16:19:25 -0400

ikiwiki (3.20120109) unstable; urgency=low

  * mdwn: Can use the discount markdown library, via the
    Text::Markdown::Discount perl module. This is preferred if available
    since it's the fastest currently supported markdown library, speeding up
    ikiwiki's markdown rendering by a factor of 40.
    (However, when multimarkdown is enabled, Text::Markdown::Multimarkdown
    is still used.)
  * On Debian, depend on libtext-markdown-discount.

 -- Joey Hess <joeyh@debian.org>  Mon, 09 Jan 2012 11:49:14 -0400

ikiwiki (3.20111229) unstable; urgency=low

  * Consume all stdin when rcs_receive short-circuits,