@@ -12,6 +12,7 @@ ikiwiki (3.20120203) UNRELEASED; urgency=low
     Thanks to Blars Blarson and Antoine Beaupré, as well as the worldwide
     OpenStreetMap community for this utter awesomeness.
   * Add a few missing jquery UI icons to attachment upload widget underlay.
+  * URI escape filename when generating the diffurl.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 08 Feb 2012 16:07:00 -0400
 
